tools: add java 25 network profiles